# KAOS

./: .gitignore  Cargo.toml  Makefile  README.MD  boot.asm  make  makefile  multiboot_header.asm
libs/bump_allocator/: Cargo.toml
libs/bump_allocator/src/: lib.rs
libs/hole_list_allocator/: Cargo.toml
libs/hole_list_allocator/src/: lib.rs
src/: fib.rs  lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
