[package]
name = "kaos"
version = "0.0.1"
authors = ["Kristian Alvarez <krijor@kth.se>"]

[lib]
crate-type = ["staticlib"] 

[dependencies] 
rlibc = "0.1.4"
volatile = "0.1.0"

# The development profile, used for `cargo build`. 
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`
[profile.release]
panic = "abort" 
