[package]
name = "kaos"
version = "0.0.4"
authors = ["Kristian Alvarez <krijor@kth.se>"]

[lib]
crate-type = ["staticlib"] 

[dependencies] 
once = "0.2.1"
rlibc = "0.1.4"
volatile = "0.1.0"
spin = "0.3.4"
multiboot2 = "0.1.0" 
bitflags = "0.7.0"
[dependencies.x86]
version = "0.7.1"
default-features = false

[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"

[workspace]

# The development profile, used for `cargo build`. 
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`
[profile.release]
panic = "abort" 
